libnautilus-private/nautilus-icon-container.c
@@ -5510,12 +5510,6 @@ key_press_event (GtkWidget *widget,
 							 "context_click_background");
 			}
 			break;
-		case GDK_KEY_v:
-			/* Eat Control + v to not enable type ahead */
-			if ((event->state & GDK_CONTROL_MASK) != 0) {
-				handled = TRUE;
-			}
-			break;
 		default:
 			break;
 		}
@@ -5531,7 +5525,8 @@ key_press_event (GtkWidget *widget,
 	if (!handled &&
 	    event->keyval != GDK_KEY_slash /* don't steal slash key event, used for "go to" */ &&
 	    event->keyval != GDK_KEY_BackSpace &&
-	    event->keyval != GDK_KEY_Delete) {
+	    event->keyval != GDK_KEY_Delete &&
+	    !(event->keyval == GDK_KEY_v && event->state == GDK_CONTROL_MASK)) {
 		GdkEvent *new_event;
 		GdkWindow *window;
 		char *old_text;
